--- a/css/global.css
+++ b/css/global.css
@@ -6,6 +6,22 @@ body
     width:100%;
 }
 
+#logo
+{
+    position:absolute;
+    bottom: 8px;
+    left: 50vw;
+    height: 32px;
+}
+
+#logo img
+{
+    margin-left:-50%;
+    height:100%;
+    width: auto;
+    display: block;
+}
+
 #menu-left
 {
     height:100vh;
@@ -216,7 +232,6 @@ body
     padding: 0 0 0 12px;
     height:48px;
     line-height: 32px;
-    /* width: 100%; */
     border-top: 1px solid #ccc;
 }
 
